# demo-prefect-deployment

./: .gitignore  Dockerfile  prefect.yaml  pyproject.toml  readme.md  requirements.txt
flows/: main.py
infra/: setup.sh  start-etl-worker.sh
tasks/: adders.py  tracker.py
