[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "demo_prefect_deployment"
version = "0.0.1"
authors = [
  { name="Emmanuel Ogunwede", email="ogunwedeemmanuel@gmail.com" },
]
description = "Testing prefect dev/deployment patterns"
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools.packages]
find = {}